[fix][createsend] changed http to https for html suscribe form. added exporting users to xml  file

--- a/app/views/shared/_newsletter_signup.html.slim
+++ b/app/views/shared/_newsletter_signup.html.slim
@@ -13,7 +13,7 @@ ruby:
       h2.text-center.h2-title Become Famous.
       p.lead Get a taste of fame (and all its perks) with $20 OFF your first purchase, free styling sessions & VIP treatment.
   .container-fluid
-    form action="http://fameandpartners.createsend.com/t/t/s/urikx/" method="post" class="form-inline"
+    form action="https://fameandpartners.createsend.com/t/t/s/urikx/" method="post" class="form-inline"
       .form-group
         input#fieldEmail.form-control name="cm-urikx-urikx" type="email" placeholder="Enter email" /
         input type="hidden" id="fieldName"    name="cm-name" value=(current_spree_user.try(:full_name))
