[feat] Home page tiles

--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -1,6 +1,9 @@
 .page-content.index
   ul.rslides
     li
+      a href="/seventies-summer-collection"
+        = image_tag "home-page-tiles/here-comes-the-sun-#{current_site_version.code}.jpg", alt: 'Here comes the Sun', class: 'img-responsive portrait-img'
+    li
       a href="/dresses"
         = image_tag "home-page-tiles/taste-of-fame.jpg", alt: 'Taste of Fame', class: 'img-responsive portrait-img'
     li
