[fix] fix 404 urls on mailer html templates

--- a/app/views/spree/shipment_mailer/shipped_email.html.slim
+++ b/app/views/spree/shipment_mailer/shipped_email.html.slim
@@ -90,7 +90,7 @@ table align="center" border="0" cellpadding="0" cellspacing="0" width="600px"
             tr : td height="40"
             tr
               td style="color: #666; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;"
-                a href="http://fameandpartners.com/help" style="#{subtle_link}" Customer Service
+                a href="http://fameandpartners.com/faqs" style="#{subtle_link}" FAQ
                 '  |  
                 a href="mailto:team@fameandpartners.com" style="#{subtle_link}"
                   ' team@fameandpartners.com
