--- a/app/views/spree/order_mailer/confirm_email.html.slim
+++ b/app/views/spree/order_mailer/confirm_email.html.slim
@@ -64,7 +64,7 @@ table align="center" border="0" cellpadding="0" cellspacing="0" width="100%"
               td height="40"
             tr
               td style="color: #666; text-transform: uppercase; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;"
-                a href="http://fameandpartners.com/help" style="color: #666; text-transform: uppercase; text-decoration: none; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;" Customer Service
+                a href="http://fameandpartners.com/faqs" style="color: #666; text-transform: uppercase; text-decoration: none; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;" FAQ
                 '  |  
                 span style="color: #666; text-transform: uppercase; text-decoration: none; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;" 1300 924 860
             tr
