--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -170,10 +170,11 @@ ruby:
                     p.text-center.edit-title Our Beautiful Bridesmaids Collection
 
                 .col-md-3
-                  = link_to wicked_game_collection_path do
+                  = link_to seventites_summer_collection_path do
                     .image-container
-                       = image_tag src='edits/AMFAM/1_141223_01_F&PAMFAM-edits-nav.jpg', :class => 'img-responsive', :alt => 'Fame &amp; Partners'
-                    p.text-center.edit-title The Wicked Game Collection
+                      /  = image_tag src='edits/seventies-summer/edits-nav.jpg', :class => 'img-responsive', :alt => 'Fame &amp; Partners'
+                      = image_tag src='edits/BRIDESMAIDS/1_171114_F&P_-BRIDESMAIDS-edits-nav.jpg', :class => 'img-responsive', :alt => 'Fame &amp; Partners'
+                    p.text-center.edit-title Summer Collection
 
                 .col-md-3
                   = link_to break_hearts_collection_path do
