[feat] Why not change the name at the last minute?

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -170,11 +170,10 @@ ruby:
                     p.text-center.edit-title Our Beautiful Bridesmaids Collection
 
                 .col-md-3
-                  = link_to seventites_summer_collection_path do
+                  = link_to here_comes_the_sun_collection_path do
                     .image-container
-                      /  = image_tag src='edits/seventies-summer/edits-nav.jpg', :class => 'img-responsive', :alt => 'Fame &amp; Partners'
-                      = image_tag src='edits/BRIDESMAIDS/1_171114_F&P_-BRIDESMAIDS-edits-nav.jpg', :class => 'img-responsive', :alt => 'Fame &amp; Partners'
-                    p.text-center.edit-title Summer Collection
+                       = image_tag src='edits/here-comes-the-sun/edits-nav.jpg', :class => 'img-responsive', :alt => 'Fame &amp; Partners'
+                    p.text-center.edit-title Here Comes The Sun
 
                 .col-md-3
                   = link_to break_hearts_collection_path do
