--- a/app/views/landing_pages/here_comes_the_sun.html.slim
+++ b/app/views/landing_pages/here_comes_the_sun.html.slim
@@ -1,14 +1,14 @@
 = render :partial => 'landing_pages/common'
 
-.page-content.index.seventies-summer
+.page-content.index.here-comes-the-sun
   ul.rslides
     - (1..10).each do |n|
       li
-        = image_tag "edits/seventies-summer/#{n}.jpg", alt: "70s Summer #{n}", class: 'img-responsive portrait-img'
+        = image_tag "edits/here-comes-the-sun/#{n}.jpg", alt: "Here Comes the Sun #{n}", class: 'img-responsive portrait-img'
       
   .page-content.products-collections.category
     .container.relative.products-collection
-      - all_products = get_products_from_edit('seventies-summer', nil, nil, 20)
+      - all_products = get_products_from_edit('HERE COMES THE SUN', nil, nil, 20)
 
       - all_products.each_slice(4) do |products|
         = render :partial => '/landing_pages/products_four', :locals => { :products => products }
