--- a/app/views/landing_pages/here_comes_the_sun.html.slim
+++ b/app/views/landing_pages/here_comes_the_sun.html.slim
@@ -8,7 +8,7 @@
       
   .page-content.products-collections.category
     .container.relative.products-collection
-      - all_products = get_products_from_edit('HERE COMES THE SUN', nil, nil, 20)
+      - all_products = get_products_from_edit('here-comes-the-sun', nil, nil, 33)
 
       - all_products.each_slice(4) do |products|
         = render :partial => '/landing_pages/products_four', :locals => { :products => products }
