--- a/app/views/landing_pages/here_comes_the_sun.html.slim
+++ b/app/views/landing_pages/here_comes_the_sun.html.slim
@@ -12,3 +12,6 @@
 
       - all_products.each_slice(4) do |products|
         = render :partial => '/landing_pages/products_four', :locals => { :products => products }
+
+    .row.relative.more-products
+          = link_to 'More Dresses', '/dresses', class: 'btn btn-black'
