--- a/app/assets/stylesheets/redesign/fashion-it-girl-winner.css.scss
+++ b/app/assets/stylesheets/redesign/fashion-it-girl-winner.css.scss
@@ -386,11 +386,16 @@ h2 span {
   margin-top: 2rem;
   margin-bottom: 2rem;
   text-align: center;
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  position: relative;
 
   .popsugar {
     width: 200px;
+  }
+
+  .padding-top {
+    padding-top: 5rem;
   }
 
   .fame-logo {
@@ -399,18 +404,42 @@ h2 span {
 
   p {
     font-size: 4rem;
+    padding-left: 8rem;
+    padding-right: 8rem;
   }
 
   .runner-up {
     text-transform: uppercase;
+    padding-bottom: 5rem;
+  }
+
+  .top-arrow {
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 150px 150px 0;
+    border-color: transparent #013648 transparent transparent;
+    right: 0;
+    position: absolute;
+  }
+
+  .bottom-arrow {
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 150px 0 0 150px;
+    border-color: transparent transparent transparent #013648;
+    left: 0;
+    bottom: 0;
+    position: absolute;
   }
 }
 
 .quote {
   background-color: #f6e0d3;
-  padding-top: 5rem;
+  margin-top: -15px;
   padding-bottom: 5rem;
-  text-trasform: uppercase;
+  text-transform: uppercase;
   font-size: 3rem;
   text-align: center;
   clear: both;
@@ -505,14 +534,14 @@ h2 span {
 
   .application {
     background-color: #013648;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+    text-align:center;
 
-    h3 {
+    a {
       color: white;
-      text-align: center;
       font-size: 3rem;
-      padding-top: 2rem;
+      text-align:center;
     }
   }
 
@@ -523,6 +552,8 @@ h2 span {
     background-repeat: no-repeat;
     margin-left: auto;
     margin-right: auto;
+    margin-top: -15px;
+    margin-bottom: 3rem;
   }
 
   .close-quote {
