[fix]: heads being cust off on index

--- a/app/views/landing_pages/amfam.html.slim
+++ b/app/views/landing_pages/amfam.html.slim
@@ -1,6 +1,6 @@
 = render :partial => 'landing_pages/common'
 
-.page-content.index.amfam
+.page-content.amfam
   .container.relative
     .row.relative
   #theTarget style=("height: 720px;")
