--- a/app/views/landing_pages/break-hearts-not-banks.html.slim
+++ b/app/views/landing_pages/break-hearts-not-banks.html.slim
@@ -1,6 +1,6 @@
 = render :partial => 'landing_pages/common'
 
-.page-content.index.break-hearts-not-banks
+.page-content.break-hearts-not-banks
   ul.rslides
 
     li
