--- a/app/views/landing_pages/bridesmaids.html.slim
+++ b/app/views/landing_pages/bridesmaids.html.slim
@@ -1,7 +1,7 @@
 = content_for :inline_javascript do
   = raw "$('.img-product').hoverable();"
 
-.page-content.index.bridesmaids
+.page-content.bridesmaids
   ul.rslides
 
     li
