--- a/app/assets/stylesheets/redesign/_index.css.scss
+++ b/app/assets/stylesheets/redesign/_index.css.scss
@@ -1,55 +1,55 @@
 .caption-title {
-	color: white;
-	text-transform: uppercase;
-	font-family: forum;
-	font-size: 10.6rem;
-	letter-spacing: -1px;
+  color: white;
+  text-transform: uppercase;
+  font-family: forum;
+  font-size: 10.6rem;
+  letter-spacing: -1px;
 }
 
 .page-content.index {
-	padding-bottom: 0;
-	margin-bottom: -80px;
+  padding-bottom: 0;
+  margin-bottom: -80px;
 }
 
 .col-md-4{
-	height: 100%;
+  height: 100%;
 }
 
 .call-to-actions {
 
-	.row {
-		margin-left: 0;
-		margin-right: 0;
-	}
+  .row {
+    margin-left: 0;
+    margin-right: 0;
+  }
 
-	.header {
-		height: 70px;
-		margin-bottom: 0;
+  .header {
+    height: 70px;
+    margin-bottom: 0;
 
-		h3 {
-			padding-top: 2.6rem;
-			text-transform: uppercase;
-			margin-top: 0;
-		}
-	}
+    h3 {
+      padding-top: 2.6rem;
+      text-transform: uppercase;
+      margin-top: 0;
+    }
+  }
 
-	.black {
-		background-color: black;
+  .black {
+    background-color: black;
 
-		h3 {
-		color: white;
-		}
-	}
+    h3 {
+    color: white;
+    }
+  }
 
-	.pink {
-		color: black;
-		background-color: #eeddf0
-	}
+  .pink {
+    color: black;
+    background-color: #eeddf0
+  }
 
-	.img-responsive {
-		max-width: none;
-		width: 100%;
-	}
+  .img-responsive {
+    max-width: none;
+    width: 100%;
+  }
 }
 
 .shop-with-us.middle {
@@ -70,178 +70,178 @@
 }
 
 .shop-with-us.brand-pink {
-	img {
-		margin-bottom: 1.8rem;
-	}
+  img {
+    margin-bottom: 1.8rem;
+  }
 }
 
 .email-sub {
-	background-color: #f6e2d5;
-	min-height: 312px;
-	margin-bottom: 4.5rem;
+  background-color: #f6e2d5;
+  min-height: 312px;
+  margin-bottom: 4.5rem;
 
-	button {
-		margin-top: 22px;
-	  margin-left: 12px;
-	  padding: 0;
-	  font-family: forum;
-	  color: black;
-	  text-transform: none;
+  button {
+    margin-top: 22px;
+    margin-left: 12px;
+    padding: 0;
+    font-family: forum;
+    color: black;
+    text-transform: none;
 
-	  &:hover {
-	  	background-color: transparent;
-	  }
-	}
+    &:hover {
+      background-color: transparent;
+    }
+  }
 
-	input {
-		text-transform: none;
-	}
+  input {
+    text-transform: none;
+  }
 
-	.submit {
-		display: inline-block;
-	}
+  .submit {
+    display: inline-block;
+  }
 
-	.form-control {
-		width: 100%;
-	}
+  .form-control {
+    width: 100%;
+  }
 
-	.form-group {
-		width: 40%;
+  .form-group {
+    width: 40%;
 
-		@media (max-width: 990px){
-			width: 100%
-		}
-	}
+    @media (max-width: 990px){
+      width: 100%
+    }
+  }
 
-	.submit {
-		@media (max-width: 990px){
-		display: block;
-		}
-	}
+  .submit {
+    @media (max-width: 990px){
+    display: block;
+    }
+  }
 }
 
 .search-bar {
 
-	.input-group {
-		width: 500px;
-	}
+  .input-group {
+    width: 500px;
+  }
 
-		button {
-		float:left;
-	}
+    button {
+    float:left;
+  }
 }
 
 .email-sub, .search-bar {
 
-	@media (min-width: 1200px){
-		width: 100%;
-	}
+  @media (min-width: 1200px){
+    width: 100%;
+  }
 
-	h2 {
-		font-family: 'forum';
-		text-transform: uppercase;
-		font-size: 8rem;
-		margin-top: 45px;
+  h2 {
+    font-family: 'forum';
+    text-transform: uppercase;
+    font-size: 8rem;
+    margin-top: 45px;
 
-		@media(max-width: 480px){
-			font-size: 6rem;
-		}
-	}
+    @media(max-width: 480px){
+      font-size: 6rem;
+    }
+  }
 
-	.lead {
-		text-transform: uppercase;
-		font-style: normal;
-		font-size: 1.7rem;
-		font-weight: 500;
-		max-width: 460px;
-		margin-left: auto;
-		margin-right: auto;
-	}
+  .lead {
+    text-transform: uppercase;
+    font-style: normal;
+    font-size: 1.7rem;
+    font-weight: 500;
+    max-width: 460px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
-	.form-control {
-		background-color: transparent;
-		border-bottom:1px solid black;
-		display: inline-block;
-		padding: 0;
-		height: 30px;
-	}
+  .form-control {
+    background-color: transparent;
+    border-bottom:1px solid black;
+    display: inline-block;
+    padding: 0;
+    height: 30px;
+  }
 
-	.input-group {
-		margin-left: auto;
-		margin-right: auto;
+  .input-group {
+    margin-left: auto;
+    margin-right: auto;
 
-		@media (max-width: 550px){
-			width: 100%;
-			margin-left: 0;
-			margin-right: 0;
-		}
-	}
+    @media (max-width: 550px){
+      width: 100%;
+      margin-left: 0;
+      margin-right: 0;
+    }
+  }
 
-	::-webkit-input-placeholder { /* WebKit browsers */
-	    text-transform: none;
-	    padding-bottom: 0;
-	    margin-bottom: 0;
-	    bottom: 0;
-	}
+  ::-webkit-input-placeholder { /* WebKit browsers */
+      text-transform: none;
+      padding-bottom: 0;
+      margin-bottom: 0;
+      bottom: 0;
+  }
 
-	:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-	   text-transform: none;
-	   opacity:  1;
-	}
+  :-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+     text-transform: none;
+     opacity:  1;
+  }
 
-	::-moz-placeholder { /* Mozilla Firefox 19+ */
-	   text-transform: none;
-	   opacity:  1;
-	}
+  ::-moz-placeholder { /* Mozilla Firefox 19+ */
+     text-transform: none;
+     opacity:  1;
+  }
 
-	:-ms-input-placeholder { /* Internet Explorer 10+ */
-	   text-transform: none;
-	}
+  :-ms-input-placeholder { /* Internet Explorer 10+ */
+     text-transform: none;
+  }
 
 
 
-	.col-md-2 {
-		padding-left: 0;
-	}
-	.col-md-10 {
-		padding-right: 0;
-	}
+  .col-md-2 {
+    padding-left: 0;
+  }
+  .col-md-10 {
+    padding-right: 0;
+  }
 }
 
 @media (min-width: 990px){
-	.row-same-height {
-	    display: table;
-	    width: 100%;
-	}
+  .row-same-height {
+      display: table;
+      width: 100%;
+  }
 }
 
 .shop-with-us {
 
-	@media (min-width: 990px){
-		display: table-cell;
-	  float: none !important;
-	}
-	h2 {
-		font-size: 4.5rem;
-		margin-top: 1.2rem
-	}
+  @media (min-width: 990px){
+    display: table-cell;
+    float: none !important;
+  }
+  h2 {
+    font-size: 4.5rem;
+    margin-top: 1.2rem
+  }
 
-	h1 {
-		padding-top: 2rem;
-		font-family: forum;
-		font-size: 4.5rem;
-		text-transform: uppercase;
-		line-height: 3rem;
+  h1 {
+    padding-top: 2rem;
+    font-family: forum;
+    font-size: 4.5rem;
+    text-transform: uppercase;
+    line-height: 3rem;
 
-		small{
-			color: black;
-		}
-	}
+    small{
+      color: black;
+    }
+  }
 
-	a {
-		text-decoration:none;
-		color:black;
-	}
+  a {
+    text-decoration:none;
+    color:black;
+  }
 
     ul.list-inline {
       li { padding-left: 0px; padding-right: 0px;}
@@ -253,125 +253,131 @@
       }
     }
 
-	.row {
-		padding-left: 2rem;
-		padding-right: 2rem;
-	}
+  .row {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
 
-	p {
-		padding-right: 18.5%;
-		padding-left: 18.5%;
-		padding-bottom: 4%
-	}
+  p {
+    padding-right: 18.5%;
+    padding-left: 18.5%;
+    padding-bottom: 4%
+  }
 
-	h4 {
-		text-transform: uppercase;
-		font-size: 1.5rem;
-		margin-bottom: 0;
-	}
+  h4 {
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    margin-bottom: 0;
+  }
 
-	.img-responsive {
-		margin-left: auto;
-		margin-right: auto;
-	}
+  .img-responsive {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .slider-action {
-		cursor:pointer;
+    cursor:pointer;
 }
 
 .maintenance-page {
-	background-color: #f6e2d5;
-	background-image: url('green-corner.png');
-	background-repeat: no-repeat;
-	background-size: 90px 90px;
-	background-position: right bottom;
-	height: 100vh;
+  background-color: #f6e2d5;
+  background-image: url('green-corner.png');
+  background-repeat: no-repeat;
+  background-size: 90px 90px;
+  background-position: right bottom;
+  height: 100vh;
 
-	.row {
-		margin-left: 0;
-		margin-right: 0;
-	}
+  .row {
+    margin-left: 0;
+    margin-right: 0;
+  }
 
-	.col-md-8 {
-		overflow: hidden;
-		margin-left: -15px;
+  .col-md-8 {
+    overflow: hidden;
+    margin-left: -15px;
 
-		img {
-		height: 100vh;
-		overflow: hidden;
-		}
-	}
+    img {
+    height: 100vh;
+    overflow: hidden;
+    }
+  }
 
-	.text-content {
-		margin-left: 4%;
-		max-width: 35rem;
-	}
+  .text-content {
+    margin-left: 4%;
+    max-width: 35rem;
+  }
 
-	h1 {
-		text-transform: uppercase;
-		font-family: forum;
-		font-size: 6.5rem;
-		margin-top: 40%;
-		margin-bottom: 0;
-		letter-spacing: 1px;
-		line-height: 5.5rem;
+  h1 {
+    text-transform: uppercase;
+    font-family: forum;
+    font-size: 6.5rem;
+    margin-top: 40%;
+    margin-bottom: 0;
+    letter-spacing: 1px;
+    line-height: 5.5rem;
 
-		span {
-			font-size: 4rem;
-			line-height: 3rem;
-		}
-	}
+    span {
+      font-size: 4rem;
+      line-height: 3rem;
+    }
+  }
 
-	.logo img{
-		height: 80px;
-		margin-left: auto;
-		margin-right: auto;
-	}
+  .logo img{
+    height: 80px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
-	h2 {
-		text-transform: uppercase;
-		font-family: forum;
-		margin-top: 0;
-		padding-bottom: 4rem;
-		font-size: 2.5rem;
-	}
+  h2 {
+    text-transform: uppercase;
+    font-family: forum;
+    margin-top: 0;
+    padding-bottom: 4rem;
+    font-size: 2.5rem;
+  }
 
-	p {
-		text-transform: uppercase;
-		margin: 0;
-	}
+  p {
+    text-transform: uppercase;
+    margin: 0;
+  }
 }
 
 .prom-queen {
-	background-image: url('glam_rebel.jpg');
-	height:490px;
+  background-image: url('glam_rebel.jpg');
+  height:490px;
 }
 
 .skippr-nav-element {
-	background-color: #D3D3D3;
+  background-color: #D3D3D3;
 }
 
 .skippr-nav-element:hover, .skippr-nav-element-active {
-	background-color:	#A9A9A9;
+  background-color:	#A9A9A9;
 }
 
 .search-form {
-	.form-control {
-		@media (max-width: 990px){
-			width: 100% !important;
-		}
-	}
+  .form-control {
+    @media (max-width: 990px){
+      width: 100% !important;
+    }
+  }
 
-	button {
-		@media (max-width: 990px){
-			width: 100%;
-		}
-	}
+  button {
+    @media (max-width: 990px){
+      width: 100%;
+    }
+  }
+}
+
+.index {
+  ul.rslides {
+    margin-top: 70px;
+  }
 }
 
 .list-inline li a:hover {
-		color: #355e6d;
+    color: #355e6d;
 }
 
 .rslides {
@@ -407,8 +413,8 @@
 }
 
 .rslides_tabs {
-	position: relative;
-	z-index: 3;
+  position: relative;
+  z-index: 3;
   list-style: none;
   padding: 0;
   top: -70px;
@@ -421,8 +427,8 @@
   margin-bottom: 0px;
 
   @media(max-width: 768px){
-  	font-size: 20px;
-  	top: -30px;
+    font-size: 20px;
+    top: -30px;
   }
 }
 
@@ -454,4 +460,3 @@ a {
   color: grey;
   text-decoration: none;
 }
-
