--- a/app/views/statics/fashion_it_girl_au_2015.html.slim
+++ b/app/views/statics/fashion_it_girl_au_2015.html.slim
@@ -65,7 +65,7 @@
         p 15th July 2015
 
   .application
-    = link_to('Let us remind you when applications open', new_contact_path)
+    h4 Remember to come back here on Monday 18th of May when applications are open!
 
 
 = content_for :inline_javascript do
