[bugfix] shapes filters have humanize text method

--- a/app/views/products/collections/show.html.slim
+++ b/app/views/products/collections/show.html.slim
@@ -29,7 +29,7 @@ ruby:
 
 ruby:
   style_options = options_from_collection_for_select(@filter.styles, :permalink, :name, @collection.style.try(:permalink))
-  shape_options = options_from_collection_for_select(@filter.shapes, :to_s, :to_s, @collection.bodyshape.try(:downcase))
+  shape_options = options_from_collection_for_select(@filter.shapes, :to_s, :humanize, @collection.bodyshape.try(:downcase))
   color_options = color_options_for_select_from_options_values(@filter.colors, @collection.color.try(:name))
   sort_options = options_from_collection_for_select(@filter.sort_orders, :first, :second, @collection.order.try(:downcase))
 
