[copy] Update terms

--- a/app/views/statics/ecom_terms.html.slim
+++ b/app/views/statics/ecom_terms.html.slim
@@ -47,11 +47,10 @@
 
         li We only accept returns or exchanges up to 30 days from the original date of shipment. Any item to be returned or exchanged must be in new, unused and resalable condition, with the DO NOT REMOVE tag still attached in the same place as originally sent. We photograph every product as part of our QA process so we know where the DO NOT REMOVE tag was attached. Any exchange or return should be sent back in the original, undamaged packaging, plus any accessories or extras that may have been included with the shipment. For full priced garments, we do not charge a restocking fee. For any discounted items, we charge a $14.95 restocking fee when returned for a refund. Items exchanged for another item or returned for a credit are not charged a restocking fee. Exchanges will only be allowed for size changes within 1 dress size, for example a dress ordered in size 10 can be exchanged for a size 8 or 12.
 
+        li If you purchase multiple sizes in one style/colour we will only accept an exchange for the returning sizes. We do not offer refunds if you are returning for this reason. If you are confused about your size, simply contact our friendly customer service team to assist you in working out best fit for you.
 
-        li If you purchase multiple sizes in one style/colour we will only accept an exchange for the returning sizes. We do not accept refunds for this reason
+        li If your purchase includes more than 1 style in the same size, we can only offer a full refund for 1 style; if you would like to return more from this order, we can offer an exchange or credit if you meet all other returns criteria.
 
-        li If you purchase includes multiple styles we only offer a full refund for one style, and if you are wanting to return more from this order, we can offer an exchange or credit.
-      
       p To make a return or exchange, please follow these steps:
 
       = render 'returns'
