--- a/app/views/statics/faqs.html.slim
+++ b/app/views/statics/faqs.html.slim
@@ -23,7 +23,7 @@
       h3 Can I cancel my order?
       p If you would like to cancel your order, please email team@fameandpartners.com immediately with your cancellation request and order number.
       p If your dress is customised we cannot accept cancellations after 24 hours of purchasing.
-      p If you wish to cancel your order outside of 24 hours, we can offer you a 50% refund on your purchase or a store credit note for future purchases with Fame & Partners.
+      p If you wish to cancel your order outside of 24 hours, we can offer you a 50% refund and a 50% credit note or a full store credit note for future purchases with Fame & Partners.
 
       h3 How can I track my order?
       p As soon as your order ships, you will be provided with a tracking number via email. You can also find your order details and tracking information on the My Orders tab within the Account Settings section, which you can access when you are logged in. If you did not create a username/password or sign up when you purchased your dress, you will need to do so, to track your order.
@@ -31,10 +31,10 @@
       h2 Shipping & Deliveries
 
       h3 When will my order ship?
-      p Shipping times may vary due to availability of merchandise. If your item is in stock and you have not requested any customizations, your order will be dispatched within 2 business days of purchase. If your item is not in stock, or you have requested a customization, we will be making your dress, on demand, just for you! Please allow 2 weeks from the date of your purchase for production before your order is dispatched - a maximum of 10 business days for items out of stock and a maximum of 14 business days for orders with a customization.
-
+      
+      p Shipping times vary depending on the complexity of any customisations you might order. All of our dresses are made on demand and making will commence the day your order is received. Our make time varies depending on customisations; between 4 - 8 business days which means you will receive your dress in up to 10 business days. We recommend allowing 2 weeks from the date of your purchase to ensure you have enough time for your dress to arrive for your special event. If you need a dress faster, simply contact our customer service team who can explain our express dress making service where you can receive your dress in 5 business days!
+            
       p Please note: Orders are not shipped on the weekends or holidays.
-
 
       h3 How long will it take for my order to arrive?
       p Please refer to the table below to determine your shipping times:
@@ -44,10 +44,6 @@
           th Order Type
           th Australia
           th United States
-        tr
-          td IN STOCK
-          td 4 Business Days
-          td 5 Business Days
         tr
           td ON DEMAND, STANDARD DRESS
           td 7 - 10 Business Days
