--- a/app/assets/stylesheets/redesign/product/_product_menu.css.scss
+++ b/app/assets/stylesheets/redesign/product/_product_menu.css.scss
@@ -67,3 +67,39 @@
     right: 0;
   }
 }
+
+
+// Production time panel 
+.production-time-panel {
+  background-color: #f5f5f5;
+  padding-left: 55px;
+  padding-right: 55px;
+  text-align: center;
+  .close-btn {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+}
+
+.production-time-box {
+  background-color: #fff;
+  padding-top: 20px;
+  h2 {
+    margin-top: 0;
+    margin-bottom: 5px;
+  }
+  + .production-time-box {
+    margin-top: 40px;
+  }
+  .icon {
+    font-size: 2.5em;
+    margin-bottom: 5px;
+    color: #043646;
+  }
+  .icon-delivery-express {
+    text-indent: -10px;
+  }
+}
+// @end Production time panel
+// -----------------
