markup getitfirst banner

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -81,9 +81,20 @@ ruby:
                         span.fit-guarantee.menu-icon
                         | Fit Guarantee
               .mega-menu--secondary
+                .mega-menu-banner 
+                  .mega-menu-banner-container
+                    .title 
+                      span Get it
+                      br
+                      span first.
+                    p 
+                      ' Dresses delivered 
+                      br
+                      ' in 2-5 business days
+                    a.btn.btn-sm.btn-block href="/getitfirst" Shop now
                 .container-fluid.max-width-100
                   .row
-                    .col-md-3.col-lg-2.col-md-offset-3
+                    .col-md-3.col-lg-2.col-md-offset-4
                       h4.link-header Events
                       ul.mega-menu-list
                         li.mega-menu-list--item
