--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -62,6 +62,41 @@
 	height: 100px;
 }
 
+// Mega menu banner
+.mega-menu-banner {
+	position: absolute;
+	left: 15px;
+	top: 130px;
+	width: 410px;
+	height: 270px;
+	display: block;
+	background: url('getitfirst-small.jpg') no-repeat;
+	color: #fff;
+	.mega-menu-banner-container {
+		margin: 20px 10px 10px 48%;
+	}
+	.title {
+		font-family: Forum;
+		text-transform: uppercase;
+		font-size: 80px;
+		line-height: 0.8;
+		span:first-child { font-size: 0.8em;}
+	}
+	p { 
+		color: #fff;
+		line-height: 1.1;
+		font-size: 1.2em;
+		margin-top: 10px;
+	}
+	.btn {
+		background-color: #f6e0d3;
+		color: #000;
+		font-weight: 300;
+	}
+} 
+// @end Mega menu banner
+// -----------------
+
 .stories {
 	position: relative;
 	border: 1px solid #040505;
