[feat][fast delivery] texts & descriptions for fast making feature

--- a/app/views/products/collections/_product.html.slim
+++ b/app/views/products/collections/_product.html.slim
@@ -11,5 +11,5 @@
         span.moodboard
           sup +
           | moodboard
-  - if product.fast_delivery == true
+  - if product.fast_making
 	 = image_tag src='express_delivery.png', class: 'express-delivery'
