--- a/app/views/statics/_shipping_tables.html.slim
+++ b/app/views/statics/_shipping_tables.html.slim
@@ -5,6 +5,11 @@ table.table
     th U.S.A
     th Rest of World
   tr
+    td ON DEMAND, EXPRESS MAKING OPTIONS
+    td $29 2-5 Business Days
+    td $29 2-5 Business Days
+    td
+  tr
     td ON DEMAND, STANDARD DRESS
     td FREE 7 – 10 Business Days
     td FREE 7 – 10 Business Days
