--- a/app/views/statics/faqs.html.slim
+++ b/app/views/statics/faqs.html.slim
@@ -33,6 +33,8 @@
       h3 When will my order ship?
       
       p Shipping times vary depending on the complexity of any customisations you might order. All of our dresses are made on demand and making will commence the day your order is received. Our make time varies depending on customisations; between 4 - 8 business days which means you will receive your dress in up to 10 business days. We recommend allowing 2 weeks from the date of your purchase to ensure you have enough time for your dress to arrive for your special event. If you need a dress faster, simply contact our customer service team who can explain our express dress making service where you can receive your dress in 5 business days!
+
+      p You can now select our express making option for an additional cost of $29. This option guarantees you that your dress will arrive with you within 2-5 business days. If you want to know the exact date for your dress to arrive, please contact our Customer Service via #{ mail_to('team@fameandpartners.com')}.
             
       p Please note: Orders are not shipped on the weekends or holidays.
 
@@ -44,6 +46,10 @@
           th Order Type
           th Australia
           th United States
+        tr
+          td ON DEMAND, EXPRESS MAKING OPTIONS
+          td $29 2-5 Business Days
+          td $29 2-5 Business Days
         tr
           td ON DEMAND, STANDARD DRESS
           td 7 - 10 Business Days
