--- a/app/views/statics/faqs.html.slim
+++ b/app/views/statics/faqs.html.slim
@@ -57,7 +57,20 @@
 
       h2 RETURNS
       h3 What is your returns policy?
-      p If for any reason you are not happy with your garment, we accept returns under the following circumstances:
+
+      p If for any reason you are not happy with your selection, you can exchange an item for another item, or return it for a refund, subject to the following terms and limitations:
+
+      ul
+        li You can exchange your purchase for another item, or return it for a refund within 30 days of purchase, unless you acquired it (them) with a Fame & Partners credit. Any items acquired with a Fame & Partners credit can only be exchanged or returned for a credit.
+
+        li We only accept returns or exchanges up to 30 days from the original date of shipment. Any item to be returned or exchanged must be in new, unused and resalable condition, with the DO NOT REMOVE tag still attached in the same place as originally sent. We photograph every product as part of our QA process so we know where the DO NOT REMOVE tag was attached. Any exchange or return should be sent back in the original, undamaged packaging, plus any accessories or extras that may have been included with the shipment. For full priced garments, we do not charge a restocking fee. For any discounted items, we charge a $14.95 restocking fee when returned for a refund. Items exchanged for another item or returned for a credit are not charged a restocking fee. Exchanges will only be allowed for size changes within 1 dress size, for example a dress ordered in size 10 can be exchanged for a size 8 or 12.
+
+        li If you purchase multiple sizes in one style/colour we will only accept an exchange for the returning sizes. We do not offer refunds if you are returning for this reason. If you are confused about your size, simply contact our friendly customer service team to assist you in working out best fit for you.
+
+        li If your purchase includes more than 1 style in the same size, we can only offer a full refund for 1 style; if you would like to return more from this order, we can offer an exchange or credit if you meet all other returns criteria.
+
+      p To make a return or exchange, please follow these steps:
+
       = render 'returns'
 
       h3 Can I exchange for a different size or colour?
