--- a/app/views/layouts/redesign/application.html.slim
+++ b/app/views/layouts/redesign/application.html.slim
@@ -26,6 +26,7 @@ doctype html
     = render 'layouts/redesign/head'
 
   body#top
+    = render 'layouts/redesign/google_tag_manager'
     = render 'layouts/redesign/notices'
     = render 'layouts/redesign/header'
 
