--- a/app/views/layouts/redesign/_mobile_menu.html.slim
+++ b/app/views/layouts/redesign/_mobile_menu.html.slim
@@ -47,7 +47,7 @@
   #mobile-menu.mobile-menu.visible-sm.visible-xs
     .row
       .col-xs-3.mobile-menu-icon.mobile-active
-        a href="/dresses"
+        = link_to dresses_path
           span.hidden-xxs
           | View All
       .col-xs-3.mobile-menu-icon.style
