[tweak]: add style session form

--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -39,6 +39,7 @@
 @import 'redesign/login';
 @import 'redesign/sale_lp';
 @import 'redesign/fashion-it-girl-winner';
+@import 'redesign/style_session';
 
 @import 'redesign/checkout';
 @import 'redesign/cart';
