--- a/app/views/spree/admin/orders/edit.html.erb
+++ b/app/views/spree/admin/orders/edit.html.erb
@@ -1,3 +1,4 @@
+<%= render :partial => '/spree/admin/orders/sub_menu' %>
 <%= csrf_meta_tags %>
 <% content_for :page_actions do %>
   <li><%= event_links %></li>
