--- a/app/views/spree/admin/orders/index.html.erb
+++ b/app/views/spree/admin/orders/index.html.erb
@@ -1,3 +1,4 @@
+<%= render :partial => '/spree/admin/orders/sub_menu' %>
 <% content_for :page_title do %>
   <%== page_entries_info @orders, entry_name: t(:orders) %>
 <% end %>
