--- a/app/views/spree/admin/orders/show.html.erb
+++ b/app/views/spree/admin/orders/show.html.erb
@@ -1,3 +1,4 @@
+<%= render :partial => '/spree/admin/orders/sub_menu' %>
 <% content_for :page_actions do %>
   <li>
     <%= button_link_to t(:cancel_order), fire_admin_order_url(@order.number, { :e => 'cancel' }), :icon => 'icon-trash', :data => { :confirm => t(:are_you_sure) } if @order.can_cancel? %>
