--- a/app/assets/stylesheets/redesign/fashion-it-girl-winner.css.scss
+++ b/app/assets/stylesheets/redesign/fashion-it-girl-winner.css.scss
@@ -538,7 +538,7 @@ h2 span {
     padding-bottom: 4rem;
     text-align:center;
 
-    a {
+    h3 {
       color: white;
       font-size: 3rem;
       text-align:center;
