[feat][fast making] added new slide to index

--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -4,6 +4,9 @@ x.page-content.index
       = link_to here_comes_the_sun_collection_path
         = image_tag "home-page-tiles/here-comes-the-sun-#{current_site_version.code}.jpg", alt: 'Here comes the Sun', class: 'img-responsive portrait-img'
     li
+      = link_to fast_making_dresses_path
+        = image_tag "home-page-tiles/get_it_first.jpg", alt: 'Get It First', class: 'img-responsive portrait-img'
+    li
       = link_to dresses_path
         = image_tag "home-page-tiles/taste-of-fame.jpg", alt: 'Taste of Fame', class: 'img-responsive portrait-img'
     li
