[tweak]: add opacity to modal

--- a/app/assets/stylesheets/redesign/_modal.css.scss
+++ b/app/assets/stylesheets/redesign/_modal.css.scss
@@ -254,6 +254,7 @@
 .vex-theme-flat-attack.email-capture-modal.teen-vogue-2015 {
   .vex-content {
     background-color: $pink-bg;
+    opacity: 0.85;
     background:       url('campaigns/teenvogue/teen_vogue_modal_bg.png') no-repeat;
     border:           none;
     height:           407px;
