--- a/app/views/spree/user_mailer/reset_password_instructions.text.erb
+++ b/app/views/spree/user_mailer/reset_password_instructions.text.erb
@@ -2,7 +2,7 @@ Hello <%= @resource.full_name %>!
 
 Someone has requested a link to change your password. You can do this through the link below.
 
-<%= edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %>
+<%= main_app.edit_spree_user_password_url(reset_password_token: @resource.reset_password_token) %>
 
 If you didn't request this, please ignore this email.
 
