--- a/app/views/spree/orders/show.html.slim
+++ b/app/views/spree/orders/show.html.slim
@@ -19,7 +19,7 @@ ruby:
           | Order Confirmation
         - else
           | Order
-      
+
 
 .page-content.user.order.show
   .container.relative
@@ -27,7 +27,7 @@ ruby:
       .col-md-8.col-md-offset-2
         .row
           h2.order-number Your Order Number is: #{ order.number }
-          
+
           h2.order-number Ordered On: #{ l(order.completed_at.to_date) }
 
         table.table.order-items
@@ -47,13 +47,13 @@ ruby:
                     strong
                       = line_item.style_name
                     br
-                    ="Size:#{line_item.country_size.to_i}, Color: #{line_item.colour_name}"
-                    
+                    ="Size:#{line_item.size}, Color: #{line_item.colour_name}"
+
                 td= line_item_status(line_item)
                 td= line_item.style_number
                 td= line_item.quantity
                 td= line_item.display_price.to_s
-              
+
             tr.total
               td colspan="4"
               td
@@ -62,7 +62,7 @@ ruby:
                   = order.display_total
                 - if current_site_version.is_australia?
                   p Including GST.
-                  
+
         - if successfully_ordered
           - if current_site_version.is_australia?
             h3.phone itemprop="telephone" Customer Support: 1300 924 860
@@ -75,11 +75,11 @@ ruby:
             =' link_to 'FAQs.', 'http://fameandpartners.com/faqs', target: '_blank'
           p Or otherwise contact our friendly team if you need any help.
           p.support = link_to 'team@fameandpartners.com', 'mailto:team@fameandpartners.com'
-          
+
           - unless current_spree_user.blank?
             p
               button.btn.back-to-orders = link_to 'Your orders', user_orders_path, class: 'btn', remote: true
-          
+
           - if successfully_ordered
             .hide
               = render 'shared/sales_conversion_pixels', locals: {order: @order}
